# junn

./: .dockerignore  .gitignore  .travis.yml  Dockerfile  LICENSE.rst  README.rst  pyproject.toml  setup.cfg  setup.py
docs/: concepts.rst  conf.py  index.md  index.rst  junn.rst
docs/_ext/: automagicdoc.py
junn/: __init__.py  __main__.py  conftest.py
junn-predict/: pyproject.toml
junn-predict/junn_predict/: __init__.py  __main__.py
junn-predict/junn_predict/common/: __init__.py  autoconfigure_tensorflow.py  cli.py  configure_tensorflow.py  logging.py  tensorflow_addons.py  timed.py
junn-predict/junn_predict/predict/: __init__.py  cli.py  detectors.py
junn-predict/junn_predict/predict/connectors/: __init__.py  grpc_connector.py  http_connector.py  local_model.py
junn-predict/recipe/: meta.yaml
junn/common/: __init__.py  callbacks.py  common_test.py  configure_tensorflow.py  distributed.py  losses.py  seeding.py
junn/common/functions/: __init__.py  affine.py  affine_test.py
junn/common/launcher/: __init__.py  __main__.py  launcher_test.py
junn/common/layers/: __init__.py  run_model_layer.py
junn/datasets/: __init__.py  tfrecord.py
junn/io/: __init__.py  file_lists.py  io_test.py  tiffmasks.py  training.py
junn/networks/: LinkNet.py  MSD.py  Unet.py  __init__.py  all.py  network_test.py  util.py
junn/networks/functional/: __init__.py  link_net.py  msd.py  unet_layer.py
junn/networks/mixins/: __init__.py  augmentation.py  deepimagej_helper.py  losses.py  multichannel.py  prediction.py  preprocessing.py  tile_based_network.py  tile_based_prediction.py  tile_based_training.py  weighted_loss.py
junn/predict/: __init__.py  __main__.py
junn/train/: __init__.py  __main__.py  cli.py  cli_test.py
junn_predict/: __main__.py
junn_predict/common/: __init__.py  autoconfigure_tensorflow.py  cli.py  configure_tensorflow.py  logging.py  tensorflow_addons.py  timed.py
junn_predict/predict/: cli.py
junn_predict/predict/connectors/: __init__.py  http_connector.py  local_model.py  model_connector.py
recipe/: meta.yaml
recipe/junn-predict-recipe/: meta.yaml
