[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "junn"
author = "Christian C. Sachs"
author-email = "c.sachs@fz-juelich.de"
requires = [
    "numpy",
    "scipy",
    "jsonpickle",
    "tensorflow",
    "tensorflow-addons",
    "scikit-image",
    "tunable",
    "py3nvml",
    "jsonpickle",
    "tqdm",
    "colorlog",
    "pillow",
    "requests",
    "pilyso-io",
    "tifffile",
    "roifile"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Image Recognition",
]

[tool.black]
skip-string-normalization = 1

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=junn -vv --durations=0"

[tool.flake8]
max-line-length = 88
exclude = "local,*test.py,conf.py,automagicdoc.py"
extend-ignore = "E203,ANN001,ANN002,ANN003,ANN101,ANN201,ANN202,ANN204,ANN205"
max-complexity = 10
