[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "junn_predict"
author = "Christian C. Sachs"
author-email = "c.sachs@fz-juelich.de"
requires = [
    "numpy",
    # "opencv",  # no proper way of requiring this pip-compatible
    "tunable",
    "tqdm",
    "pillow",
    "requests",
    "pilyso-io",
    "tifffile",
    "roifile",
]

[tool.black]
skip-string-normalization = 1

[tool.isort]
profile = "black"
multi_line_output = 3
